Fix viewport width creating horizontal scrollbar. Add test server binaries to gitignore.

--- a/src/app.scss
+++ b/src/app.scss
@@ -51,7 +51,7 @@
 }
 
 #app {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   display: flex;
   flex-direction: column;
